// GymGate - Entity Relationship Diagram
// Paste this into https://dbdiagram.io to visualize
// Every table has gym_id = tenant isolation (each gym only sees its own data)

// ---- GYM (each gym is a tenant) ----
Table gyms {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null]
  address text
  phone varchar(20)
  email varchar(255)
  max_capacity int [not null, default: 50]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// ---- GYM ADMIN ----
Table gym_admins {
  id uuid [pk, default: `gen_random_uuid()`]
  gym_id uuid [not null, ref: > gyms.id]
  email varchar(255) [not null, unique]
  hashed_password varchar(255) [not null]
  full_name varchar(255) [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// ---- MEMBERS ----
Table members {
  id uuid [pk, default: `gen_random_uuid()`]
  gym_id uuid [not null, ref: > gyms.id]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  email varchar(255)
  phone varchar(20)
  date_of_birth date
  emergency_contact varchar(255)
  is_active boolean [not null, default: true]
  is_flagged boolean [not null, default: false]
  flag_reason text
  flagged_at timestamp
  is_inside boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    gym_id
    (gym_id, email) [unique]
  }
}

// ---- MEMBERSHIP PLANS (monthly, yearly, etc.) ----
Table membership_plans {
  id uuid [pk, default: `gen_random_uuid()`]
  gym_id uuid [not null, ref: > gyms.id]
  name varchar(255) [not null]
  description text
  duration_days int [not null]
  price decimal(10,2) [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// ---- SUBSCRIPTIONS (member + plan connection) ----

Enum subscription_status {
  active
  expired
  frozen
  cancelled
}

Table member_subscriptions {
  id uuid [pk, default: `gen_random_uuid()`]
  member_id uuid [not null, ref: > members.id]
  plan_id uuid [not null, ref: > membership_plans.id]
  gym_id uuid [not null, ref: > gyms.id]
  start_date date [not null]
  end_date date [not null]
  status subscription_status [not null, default: 'active']
  cancelled_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    member_id
    gym_id
    status
  }
}

// ---- CREDENTIALS (QR Code and NFC) ----

Enum credential_type {
  qr
  nfc
}

Table credentials {
  id uuid [pk, default: `gen_random_uuid()`]
  member_id uuid [not null, ref: > members.id]
  gym_id uuid [not null, ref: > gyms.id]
  credential_type credential_type [not null]
  credential_value varchar(512) [not null]
  is_active boolean [not null, default: true]
  issued_at timestamp [not null, default: `now()`]
  revoked_at timestamp

  indexes {
    (gym_id, credential_value) [unique]
    member_id
  }
}

// ---- GATE DEVICES ----
Table gate_devices {
  id uuid [pk, default: `gen_random_uuid()`]
  gym_id uuid [not null, ref: > gyms.id]
  device_name varchar(255) [not null]
  api_key_hash varchar(255) [not null, unique]
  is_active boolean [not null, default: true]
  last_seen_at timestamp
  created_at timestamp [not null, default: `now()`]
}

// ---- ACCESS LOGS (entry/exit records) ----

Enum access_action {
  entry
  exit
}

Enum access_status {
  granted
  denied
}

Table access_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  member_id uuid [ref: > members.id]
  gym_id uuid [not null, ref: > gyms.id]
  device_id uuid [not null, ref: > gate_devices.id]
  action access_action [not null]
  credential_type credential_type [not null]
  status access_status [not null]
  denial_reason varchar(255)
  verified_at timestamp [not null, default: `now()`]

  indexes {
    gym_id
    member_id
    (gym_id, verified_at)
  }
}
